k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portfolio-deployment
  template:
    metadata:
      labels:
        app: portfolio-deployment
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: portfolio-deployment
          image: rahul0941/portfolio-page
          ports:
            - containerPort: 80
